--- a/twinspin/.gitignore
+++ b/twinspin/.gitignore
@@ -19,6 +19,10 @@ erl_crash.dump
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
 
+# Docker artifacts
+docker-compose.override.yml
+.env.docker
+
 # Temporary files, for example, from tests.
 /tmp/
 
