--- a/twinspin/docker-compose.yml
+++ b/twinspin/docker-compose.yml
@@ -1,77 +1,52 @@
 version: '3.8'
 
 services:
-  db:
+  postgres:
     image: postgres:15-alpine
-    container_name: twinspin-db
+    container_name: twinspin-postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: twinspin_prod
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
     networks:
-      - twinspin-network
+      - twinspin_network
 
   app:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: twinspin-app
-    depends_on:
-      db:
-        condition: service_healthy
     environment:
-      # Database configuration
-      DATABASE_URL: "ecto://postgres:postgres@db:5432/twinspin_prod"
-      DATABASE_HOST: db
-      DATABASE_PORT: 5432
-      DATABASE_USER: postgres
-      DATABASE_PASSWORD: postgres
-      DATABASE_NAME: twinspin_prod
-      
-      # Phoenix configuration
-      SECRET_KEY_BASE: "changeme-generate-with-mix-phx-gen-secret"
-      PHX_HOST: localhost
-      PHX_SERVER: "true"
+      DATABASE_URL: ecto://postgres:postgres@postgres:5432/twinspin_prod
+      SECRET_KEY_BASE: ${SECRET_KEY_BASE:-please_generate_a_secret_key_base_in_production}
+      PHX_HOST: ${PHX_HOST:-localhost}
       PORT: 4000
-      
-      # Oban configuration
-      OBAN_QUEUES: "default:10,reconciliation:5"
-      
-      # Pool size
-      POOL_SIZE: 10
+      POOL_SIZE: ${POOL_SIZE:-10}
     ports:
       - "4000:4000"
+    depends_on:
+      postgres:
+        condition: service_healthy
     volumes:
-      # Optional: mount for development hot-reloading (comment out for production)
-      # - ./lib:/app/lib
-      # - ./assets:/app/assets
-      - app_data:/app/tmp
-    networks:
-      - twinspin-network
+      - ./docker/odbc:/app/odbc:ro
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:4000/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+    networks:
+      - twinspin_network
 
 volumes:
   postgres_data:
     driver: local
-  app_data:
-    driver: local
 
 networks:
-  twinspin-network:
+  twinspin_network:
     driver: bridge
 
